--- a/02.md
+++ b/02.md
@@ -70,3 +70,14 @@ React 裡：
 # 🧩 口訣
 
 > 有 value 就要有 onChange
+
+
+# 🔥 進階補充
+
+如果你真的不想綁 state，可以用：
+
+`<input defaultValue="Hello" />` 
+
+或搭配 `useRef` 讀取。
+
+但新手階段 👉 **先全部用 value + onChange**
