--- a/08.md
+++ b/08.md
@@ -69,3 +69,12 @@
 
 
 ✅ Child 只有第一次渲染，之後不會因為父元件 state 改變而重新 render
+
+
+# 簡單判斷公式
+
+-   **函式只是父元件內部使用** → 不需要 useCallback
+    
+-   **函式作為 props 傳給子元件** → 可能需要 useCallback
+    
+-   **函式做「重計算 / map / filter」很大很複雜** → 可以考慮 useCallback + useMemo
